# lit

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
client/: CMakeLists.txt
client/include/: li_client.h
client/src/: li_client.cpp  main.cpp
include/: atomic_mutex.h  channel copy.h  channel.h  li_lib.h  li_service.h  li_target.h
resource/proto/: li.proto
server/: CMakeLists.txt  build.sh
server/config/: liserver.manifest.template  sgx.conf
server/include/: atomic_mutex.h  channel.h  li_server.h  proto_addon.h  target_cache.h
server/src/: li_server.cpp  lit.cpp  target_cache.cpp
src/: LiInputSimulator.cpp  LiPerfTest.cpp  li_lib.cpp  li_service.cpp  li_target.cpp  lit.cpp  test.cpp
